Fix styling issue with the products price on mobile view

--- a/src/components/css/Products.css
+++ b/src/components/css/Products.css
@@ -47,7 +47,8 @@
   }
 
   .product-title,
-  .product-desc {
+  .product-desc,
+  .product-price {
     padding: 2rem 0.9rem 0 0.9rem;
   }
 }
